Clean Code aplicado + correção das rotas
